Use @FormParam and custom dto instead of MultivaluedMap in register form handling.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/register.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/register.html
@@ -11,7 +11,7 @@
 			</div>
 			<div>
 				<label for="register-login">Login:</label>
-				<input id="register-login" type="text" name="login" th:value="${form} ? ${form.login[0]}" />
+				<input id="register-login" type="text" name="login" th:value="${form} ? ${form.login}" />
 			</div>
 			<div>
 				<label for="register-password">Password:</label>
