Add option to choose difficulty level when adding new match.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match.html
@@ -14,6 +14,12 @@
 					</td>
 				</tr>
 				<tr>
+					<th>Difficulty</th>
+					<td colspan="4">
+						<select th:replace="templates/form :: difficulty-picker (name='players[]',levels=${difficultyLevels})"></select>
+					</td>
+				</tr>
+				<tr>
 					<th>Player</th>
 					<td>
 						<select th:replace="templates/form :: player-picker (name='players[]',players=${activeUsers})"></select>
