--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match.html
@@ -14,10 +14,18 @@
 					</td>
 				</tr>
 				<tr>
+					<th>Total campaign time [h:mm]</th>
+					<td colspan="4"><input type="text" name="total-time" value="" /></td>
+				</tr>
+				<tr>
 					<th>Difficulty</th>
 					<td colspan="4">
 						<select th:replace="templates/form :: difficulty-picker (name='players[]',levels=${difficultyLevels})"></select>
 					</td>
+				</tr>
+				<tr>
+					<th>Numbers of time restarted</th>
+					<td colspan="4"><input type="text" name="restarts" value="" /></td>
 				</tr>
 				<tr>
 					<th>Player</th>
