Add match type picker as first step in adding match process.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-campaign.html
@@ -3,7 +3,7 @@
 <body>
 	<div th:replace="templates/header :: default"></div>
 	<div id="content">
-		<h1>Add new match statistics</h1>
+		<h1>Add new campaign match statistics</h1>
 		
 		<form method="POST" action="/match/add">
 			<table>
