Move geenric match creation to /match/add/campaign location.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-campaign.html
@@ -3,15 +3,11 @@
 <body>
 	<div th:replace="templates/header :: default"></div>
 	<div id="content">
-		<h1>Add match</h1>
+		<h1>Add campaign match</h1>
 		
-		<form method="POST" action="/match/add">
+		<form method="POST" action="/match/add/campaign">
 			<div class="errors" th:if="${errors != null}">
 				<p class="error" th:each="error : ${errors}" th:text="${error}"></p>
-			</div>
-			<div>
-				<label for="add-match-type">Match type:</label>
-				<select id="add-match-type" name="match-type" th:include="templates/form :: match-type-picker (types=${matchTypes})"></select>
 			</div>
 			<div>
 				<label for="add-match-map">Map:</label>
