Fix 'survived' checkbox not keeping its status between requests.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-player-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-player-campaign.html
@@ -36,7 +36,7 @@
 			</div>
 			<div>
 				<label for="add-player-survived">Survived:</label>
-				<input id="add-player-survived" type="checkbox" name="survived" th:checked="${form.survived == true}" />
+				<input id="add-player-survived" type="checkbox" name="survived" value="true" th:checked="${form.survived == true}" />
 			</div>
 			<div>
 				<label for="add-player-deaths">Deaths:</label>
