--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-player-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-player-campaign.html
@@ -25,6 +25,25 @@
 			</tbody>
 		</table>
 		
+		<h2>Match participants</h2>
+		<table th:if="${addedPlayers.length > 0}">
+			<thead>
+				<tr>
+					<th>Player</th>
+					<th>Survived</th>
+					<th>Deaths</th>
+				</tr>
+			</thead>
+			<tr th:each="player : ${addedPlayers}">
+				<td th:text="${player.name}"></td>
+				<td th:text="${player.survived ? 'yes' : 'no'}"></td>
+				<td th:text="${player.deaths}"></td>
+			</tr>
+		</table>
+		<p th:if="${addedPlayers.length == 0}">
+			No participants added yet.
+		</p>
+		
 		<h2>Add player</h2>
 		<form method="POST" action="">
 			<div class="errors" th:if="${errors != null}">
