--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-picker.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-picker.html
@@ -7,6 +7,7 @@
 		
 		<ul>
 			<li><a href="/match/add/campaign">Campaign</a></li>
+			<li><a href="/match/add/versus">Versus</a></li>
 		</ul>
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
