--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-player-versus.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-player-versus.html
@@ -69,6 +69,11 @@
 			</div>
 		</form>
 		
+		<form method="POST" th:action="${'/match/' + match.id + '/activate'}">
+			<div>
+				<input type="submit" name="match-activate" value="Publish match" />
+			</div>
+		</form>
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
 </body>
