Add pages for match details. Add links to match details in recent matches page and map page.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/map.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/map.html
@@ -12,12 +12,16 @@
 				<tr>
 					<th>Played at</th>
 					<th>Match type</th>
+					<th>Links</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="match : ${recentMatches}">
 					<td th:text="${#dates.format(match.playedAt, 'yyyy-MM-dd')}"></td>
 					<td th:text="${match.type}"></td>
+					<td>
+						<a th:href="${'/match/' + match.id + '/' + match.typeIdentifier}">Details</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
