--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
@@ -4,6 +4,26 @@
 	<div th:replace="templates/header :: default"></div>
 	<div id="content">
 		<h1>Campaign match statistics</h1>
+		
+		<h2>General statistics</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>Map name</th>
+					<th>Played at</th>
+					<th>Difficulty</th>
+					<th>Restarts</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td th:text="${match.mapName}"></td>
+					<td th:text="${#dates.format(match.playedAt, 'yyyy-MM-dd')}"></td>
+					<td th:text="${match.difficultyName}"></td>
+					<td th:text="${match.restarts}"></td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
 </body>
