Display versus top winner team points on map statistics.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/map.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/map.html
@@ -10,11 +10,13 @@
 			<thead>
 				<tr>
 					<th>Total matches played</th>
+					<th>Most versus mode winner team points</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td th:text="${mapStatistics.totalMatchesPlayed}"></td>
+					<td th:text="${mapStatistics.topVersusPoints}"></td>
 				</tr>
 			</tbody>
 		</table>
