--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/map.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/map.html
@@ -11,12 +11,14 @@
 				<tr>
 					<th>Total matches played</th>
 					<th>Most versus mode winner team points</th>
+					<th>Campaign mode survival percentage</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td th:text="${mapStatistics.totalMatchesPlayed}"></td>
 					<td th:text="${mapStatistics.topVersusPoints}"></td>
+					<td th:text="${mapStatistics.campaignSurvivalPercentage}"></td>
 				</tr>
 			</tbody>
 		</table>
