Display average death count on map statistics.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/map.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/map.html
@@ -12,6 +12,7 @@
 					<th>Total matches played</th>
 					<th>Most versus mode winner team points</th>
 					<th>Campaign mode survival percentage</th>
+					<th>Average death count</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -19,6 +20,7 @@
 					<td th:text="${mapStatistics.totalMatchesPlayed}"></td>
 					<td th:text="${mapStatistics.topVersusPoints}"></td>
 					<td th:text="${mapStatistics.campaignSurvivalPercentage}"></td>
+					<td th:text="${mapStatistics.averageCampaignDeathCount}"></td>
 				</tr>
 			</tbody>
 		</table>
