Fix url collision when creating new match.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-campaign.html
@@ -5,7 +5,7 @@
 	<div id="content">
 		<h1>Add campaign match</h1>
 		
-		<form method="POST" action="/match/add/campaign">
+		<form method="POST" action="/new-match/add/campaign">
 			<div class="errors" th:if="${errors != null}">
 				<p class="error" th:each="error : ${errors}" th:text="${error}"></p>
 			</div>
