--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-picker.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-picker.html
@@ -6,8 +6,8 @@
 		<h1>Choose match type</h1>
 		
 		<ul>
-			<li><a href="/match/add/campaign">Campaign</a></li>
-			<li><a href="/match/add/versus">Versus</a></li>
+			<li><a href="/new-match/add/campaign">Campaign</a></li>
+			<li><a href="/new-match/add/versus">Versus</a></li>
 		</ul>
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
