--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-player-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-player-campaign.html
@@ -41,7 +41,7 @@
 					<td th:text="${player.survived ? 'yes' : 'no'}"></td>
 					<td th:text="${player.deaths}"></td>
 					<td>
-						<form method="POST" th:action="${'/match/campaign/' + match.id + '/player/delete'}">
+						<form method="POST" th:action="${'/new-match/campaign/' + match.id + '/player/delete'}">
 							<input type="hidden" name="user" th:value="${player.userId}" />
 							<input type="submit" name="player-delete" value="Delete" />
 						</form>
@@ -75,7 +75,7 @@
 			</div>
 		</form>
 		
-		<form method="POST" th:action="${'/match/' + match.id + '/activate'}">
+		<form method="POST" th:action="${'/new-match/' + match.id + '/activate'}">
 			<div>
 				<input type="submit" name="match-activate" value="Publish match" />
 			</div>
