--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/add-match-campaign.html
@@ -5,7 +5,7 @@
 	<div id="content">
 		<h1>Add campaign match</h1>
 		
-		<form method="POST" action="/new-match/add/campaign">
+		<form method="POST" action="/new-match/add/campaign" enctype="multipart/form-data">
 			<div class="errors" th:if="${errors != null}">
 				<p class="error" th:each="error : ${errors}" th:text="${error}"></p>
 			</div>
@@ -28,6 +28,10 @@
 			<div>
 				<label for="add-match-restarts">Numbers of time restarted:</label>
 				<input id="add-match-restarts" name="restarts" th:value="${form.restarts}" /> 
+			</div>
+			<div>
+				<label for="add-match-image">Final screenshot:</label>
+				<input id="add-match-image" name="image" type="file" />
 			</div>
 			<div>
 				<input type="submit" name="add-match-submit" value="Add match" />
