Display link to screenshot in campaign match statistics page.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
@@ -13,6 +13,7 @@
 					<th>Played at</th>
 					<th>Difficulty</th>
 					<th>Restarts</th>
+					<th th:if="${match.image != null}">Image</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -21,6 +22,9 @@
 					<td th:text="${#dates.format(match.playedAt, 'yyyy-MM-dd')}"></td>
 					<td th:text="${match.difficultyName}"></td>
 					<td th:text="${match.restarts}"></td>
+					<td th:if="${match.image != null}">
+						<a th:href="${'/match-image/' + match.id}">screenshot</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
