Display link to screenshot in versus match statistics page.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-versus.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-versus.html
@@ -14,6 +14,7 @@
 					<th>Played at</th>
 					<th>Winner team points</th>
 					<th>Loser team points</th>
+					<th th:if="${match.image != null}">Image</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -22,6 +23,9 @@
 					<td th:text="${#dates.format(match.playedAt, 'yyyy-MM-dd')}"></td>
 					<td th:text="${match.winnerPoints}"></td>
 					<td th:text="${match.loserPoints}"></td>
+					<td th:if="${match.image != null}">
+						<a th:href="${'/match-image/' + match.id}">screenshot</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
