--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/home.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/home.html
@@ -23,6 +23,24 @@
 			</tbody>
 		</table>
 		
+		<h2>Map list by longest break</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>Map</th>
+					<th>Days</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="map : ${mapsByBreak}">
+					<td>
+						<a th:href="${'/map/' + map.mapId}" th:text="${map.mapName}"></a>
+					</td>
+					<td th:text="${map.breakDayCount == null ? 'not played' : map.breakDayCount}"></td>
+				</tr>
+			</tbody>
+		</table>
+		
 		<h2>Most active players</h2>
 		<table>
 			<thead>
