--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
@@ -5,6 +5,26 @@
 	<div id="content">
 		<h1>User profile</h1>
 		
+		<h2>Recent matches</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>Played at</th>
+					<th>Match type</th>
+					<th>Links</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="match : ${recentMatches}">
+					<td th:text="${#dates.format(match.playedAt, 'yyyy-MM-dd')}"></td>
+					<td th:text="${match.type}"></td>
+					<td>
+						<a th:href="${'/match/' + match.id + '/' + match.typeIdentifier}">Details</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
 </body>
