--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/match-campaign.html
@@ -40,7 +40,9 @@
 			</thead>
 			<tbody>
 				<tr th:each="player : ${players}">
-					<td th:text="${player.name}"></td>
+					<td>
+						<a th:href="${'/user/' + player.userId}" th:text="${player.name}"></a>
+					</td>
 					<td th:text="${player.survived ? 'yes' : 'no'}"></td>
 					<td th:text="${player.deaths}"></td>
 				</tr>
