Display user login on top and in page title.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
@@ -3,7 +3,7 @@
 <body>
 	<div th:replace="templates/header :: default"></div>
 	<div id="content">
-		<h1>User profile</h1>
+		<h1 th:text="${user.login + ' profile'}"></h1>
 		
 		<h2>Recent matches</h2>
 		<table>
