Display number of survived campaign matches on user profile page.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
@@ -19,6 +19,10 @@
 				<strong>Versus matches played:</strong>
 				<span th:text="${playerStatistics.totalVersusMatchesPlayed}"></span>
 			</li>
+			<li>
+				<strong>Survived campaign matches:</strong>
+				<span th:text="${playerStatistics.campaignSurviveCount}"></span>
+			</li>
 		</ul>
 		
 		<h2>Recent matches</h2>
