Display number of won versus matches on user profile page.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/user.html
@@ -23,6 +23,10 @@
 				<strong>Survived campaign matches:</strong>
 				<span th:text="${playerStatistics.campaignSurviveCount}"></span>
 			</li>
+			<li>
+				<strong>Won versus matches:</strong>
+				<span th:text="${playerStatistics.versusWinCount}"></span>
+			</li>
 		</ul>
 		
 		<h2>Recent matches</h2>
