--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/register.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/register.html
@@ -3,26 +3,26 @@
 <body>
 	<div th:replace="templates/header :: default"></div>
 	<div id="content">
-		<h1>Register</h1>
+		<div class="page-header">
+			<h1>Register</h1>
+		</div>
 		
 		<form method="post" action="/register">
-			<div class="errors" th:if="${errors != null}">
-				<p class="error" th:each="error : ${errors}" th:text="${error}"></p>
-			</div>
-			<div>
+			<div class="alert alert-danger" th:if="${errors != null}" th:each="error : ${errors}" th:text="${error}"></div>
+			<div class="form-group">
 				<label for="register-login">Login:</label>
-				<input id="register-login" type="text" name="login" th:value="${form} ? ${form.login}" />
+				<input id="register-login" class="form-control" type="text" name="login" th:value="${form} ? ${form.login}" />
 			</div>
-			<div>
+			<div class="form-group">
 				<label for="register-password">Password:</label>
-				<input id="register-password" type="password" name="password" value="" />
+				<input id="register-password" class="form-control" type="password" name="password" value="" />
 			</div>
-			<div>
+			<div class="form-group">
 				<label for="register-repeat-password">Password:</label>
-				<input id="register-repeat-password" type="password" name="password-repeat" value="" />
+				<input id="register-repeat-password" class="form-control" type="password" name="password-repeat" value="" />
 			</div>
-			<div>
-				<input type="submit" name="register-submit" value="Register" />
+			<div class="form-group">
+				<input type="submit" class="btn btn-primary" name="register-submit" value="Register" />
 			</div>
 		</form>
 	</div>
