--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/register.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/register.html
@@ -7,24 +7,28 @@
 			<h1>Register</h1>
 		</div>
 		
-		<form method="post" action="/register">
-			<div class="alert alert-danger" th:if="${errors != null}" th:each="error : ${errors}" th:text="${error}"></div>
-			<div class="form-group">
-				<label for="register-login">Login:</label>
-				<input id="register-login" class="form-control" type="text" name="login" th:value="${form} ? ${form.login}" />
+		<div class="row">
+			<div class="col-xs-12 col-md-6 col-md-offset-3">
+				<form method="post" action="/register">
+					<div class="alert alert-danger" th:if="${errors != null}" th:each="error : ${errors}" th:text="${error}"></div>
+					<div class="form-group">
+						<label for="register-login">Login:</label>
+						<input id="register-login" class="form-control" type="text" name="login" th:value="${form} ? ${form.login}" />
+					</div>
+					<div class="form-group">
+						<label for="register-password">Password:</label>
+						<input id="register-password" class="form-control" type="password" name="password" value="" />
+					</div>
+					<div class="form-group">
+						<label for="register-repeat-password">Password:</label>
+						<input id="register-repeat-password" class="form-control" type="password" name="password-repeat" value="" />
+					</div>
+					<div class="form-group">
+						<input type="submit" class="btn btn-primary" name="register-submit" value="Register" />
+					</div>
+				</form>
 			</div>
-			<div class="form-group">
-				<label for="register-password">Password:</label>
-				<input id="register-password" class="form-control" type="password" name="password" value="" />
-			</div>
-			<div class="form-group">
-				<label for="register-repeat-password">Password:</label>
-				<input id="register-repeat-password" class="form-control" type="password" name="password-repeat" value="" />
-			</div>
-			<div class="form-group">
-				<input type="submit" class="btn btn-primary" name="register-submit" value="Register" />
-			</div>
-		</form>
+		</div>
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
 </body>
