--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/login.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/login.html
@@ -3,24 +3,28 @@
 <body>
 	<div th:replace="templates/header :: default"></div>
 	<div id="content">
-		<h1>Login</h1>
+		<div class="page-header">
+			<h1>Login</h1>
+		</div>
 		
-		<form method="post" action="/login">
-			<div class="errors" th:if="${errors != null}">
-				<p class="error" th:each="error : ${errors}" th:text="${error}"></p>
+		<div class="row">
+			<div class="col-xs-12 col-md-6 col-md-offset-3">
+				<form method="post" action="/login">
+					<div class="alert alert-danger" th:if="${errors != null}" th:each="error : ${errors}" th:text="${error}"></div>
+					<div class="form-group">
+						<label for="login-login">Login:</label>
+						<input id="login-login" class="form-control" type="text" name="login" th:value="${form} ? ${form.login}" />
+					</div>
+					<div class="form-group">
+						<label for="login-password">Password:</label>
+						<input id="login-password" class="form-control" type="password" name="password" value="" />
+					</div>
+					<div class="form-group">
+						<input type="submit" class="btn btn-primary" name="login-submit" value="Login" />
+					</div>
+				</form>
 			</div>
-			<div>
-				<label for="login-login">Login:</label>
-				<input id="login-login" type="text" name="login" th:value="${form} ? ${form.login}" />
-			</div>
-			<div>
-				<label for="login-password">Password:</label>
-				<input id="login-password" type="password" name="password" value="" />
-			</div>
-			<div>
-				<input type="submit" name="login-submit" value="Login" />
-			</div>
-		</form>
+		</div>
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
 </body>
