--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/logout.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/logout.html
@@ -3,9 +3,11 @@
 <body>
 	<div th:replace="templates/header :: default"></div>
 	<div id="content">
-		<h1>Logout</h1>
+		<div class="page-header">
+			<h1>Logout</h1>
+		</div>
 		
-		<p>Logged out successfully.</p>
+		<div class="alert alert-success">Logged out successfully.</div>
 	</div>
 	<div th:replace="templates/footer :: copyright" ></div>
 </body>
