--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/login.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/login.html
@@ -8,7 +8,7 @@
 		</div>
 		
 		<div class="row">
-			<div class="col-xs-12 col-md-6 col-md-offset-3">
+			<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
 				<form method="post" action="/login">
 					<div class="alert alert-danger" th:if="${errors != null}" th:each="error : ${errors}" th:text="${error}"></div>
 					<div class="form-group">
